# stub_trait

./: .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  publish.yml
src/: lib.rs
stub_trait/: Cargo.toml
stub_trait/src/: lib.rs
stub_trait/tests/: panic.rs  tests.rs
stub_trait_core/: Cargo.toml
stub_trait_core/src/: lib.rs
