[package]
name = "stub_trait"
version = "0.1.0"
authors = ["Guillaume Leroy <pro.guillaume.leroy@gmail.com"]
license-file = "../LICENSE"
readme = "../README.md"
repository = "https://github.com/leroyguillaume/stub_trait"
categories = ["development-tools::testing"]
keywords = ["mock", "mocking", "stub", "stubing", "testing"]
documentation = "https://docs.rs/stub_trait"
edition = "2021"
description = "Macro to implement stub object for a trait."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
stub_trait_core = { path = "../stub_trait_core" }
syn = { version = "1.0", features = ["full"] }
