[package]
name = "stub_trait_core"
version = "0.2.0"
authors = ["Guillaume Leroy <pro.guillaume.leroy@gmail.com"]
license-file = "../LICENSE"
readme = "../README.md"
repository = "https://github.com/leroyguillaume/stub_trait"
documentation = "https://docs.rs/stub_trait_core"
edition = "2021"
description = "Core structs used by stub_trait library."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
